Paths to images changed to relative

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		<div class="col-xs-12 col-sm-10 col-md-10 col-sm-offset-1 col-md-offset-1 well">
 			<div class="thumbnail"><!-- gives padded white background and border around img. Use this class plus img + div with caption in place of figure (img + figcaption)-->
-				<img src="http://15medium.com/codepen/tribute/reznor2.jpg" class="img-responsive" alt="trent reznor on stage" >
+				<img src="images/reznor2.jpg" class="img-responsive" alt="trent reznor on stage" >
 				<div class="caption text-center"><em>Nine Inch Nails performing in Worster MA on November 9, 2008. Photo by maryelle st. clare</em></div>
 			</div> <!-- formats for phone, tablet and medium desktop, not large desktop (lg). Offsets for tablet and medium desktop. -->	
 			<blockquote>
@@ -48,27 +48,27 @@
 
 				<div class="col-md-12">
 					<div class="col-md-2">
-						<img src="http://15medium.com/codepen/tribute/phm.jpg" class="img-responsive" alt="Pretty Hate Machine" >
+						<img src="images/phm.jpg" class="img-responsive" alt="Pretty Hate Machine" >
 						<div class="caption text-center"><em>Pretty Hate Machine</em></div>
 					</div>
 					<div class="col-md-2">
-						<img src="http://15medium.com/codepen/tribute/broken.jpg" class="img-responsive" alt="Broken" >
+						<img src="images/broken.jpg" class="img-responsive" alt="Broken" >
 						<div class="caption text-center"><em>Broken</em></div>
 					</div>
 					<div class="col-md-2">
-						<img src="http://15medium.com/codepen/tribute/spiral.jpg" class="img-responsive" alt="The Downward Spiral" >
+						<img src="images/spiral.jpg" class="img-responsive" alt="The Downward Spiral" >
 						<div class="caption text-center"><em>The Downward Spiral</em></div>
 					</div>
 					<div class="col-md-2">
-						<img src="http://15medium.com/codepen/tribute/further.jpg" class="img-responsive" alt="Further Down the Spiral" >
+						<img src="images/further.jpg" class="img-responsive" alt="Further Down the Spiral" >
 						<div class="caption text-center"><em>Further Down the Spiral</em></div>
 					</div>
 					<div class="col-md-2">
-						<img src="http://15medium.com/codepen/tribute/teeth.jpg" class="img-responsive" alt="With Teeth" >
+						<img src="images/teeth.jpg" class="img-responsive" alt="With Teeth" >
 						<div class="caption text-center"><em>With Teeth</em></div>
 					</div>
 					<div class="col-md-2">
-						<img src="http://15medium.com/codepen/tribute/hesitation.jpg" class="img-responsive" alt="Hesitation Marks" >
+						<img src="images/hesitation.jpg" class="img-responsive" alt="Hesitation Marks" >
 						<div class="caption text-center"><em>Hesitation Marks</em></div>
 					</div>
 				</div>
