Images paths now relative

--- a/index.html
+++ b/index.html
@@ -46,27 +46,27 @@
 
 							<div class="row">
 								<div class="col">
-									<img src="http://15medium.com/codepen/tribute/phm.jpg" class="img-fluid" alt="Pretty Hate Machine" >
+									<img src="images/phm.jpg" class="img-fluid" alt="Pretty Hate Machine" >
 									<div class="caption text-center"><em>Pretty Hate Machine</em></div>
 								</div>
 								<div class="col">
-									<img src="http://15medium.com/codepen/tribute/broken.jpg" class="img-fluid" alt="Broken" >
+									<img src="images/broken.jpg" class="img-fluid" alt="Broken" >
 									<div class="caption text-center"><em>Broken</em></div>
 								</div>
 								<div class="col">
-									<img src="http://15medium.com/codepen/tribute/spiral.jpg" class="img-fluid" alt="The Downward Spiral" >
+									<img src="images/spiral.jpg" class="img-fluid" alt="The Downward Spiral" >
 									<div class="caption text-center"><em>The Downward Spiral</em></div>
 								</div>
 								<div class="col">
-									<img src="http://15medium.com/codepen/tribute/further.jpg" class="img-fluid" alt="Further Down the Spiral" >
+									<img src="images/further.jpg" class="img-fluid" alt="Further Down the Spiral" >
 									<div class="caption text-center"><em>Further Down the Spiral</em></div>
 								</div>
 								<div class="col">
-									<img src="http://15medium.com/codepen/tribute/teeth.jpg" class="img-fluid" alt="With Teeth" >
+									<img src="images/teeth.jpg" class="img-fluid" alt="With Teeth" >
 									<div class="caption text-center"><em>With Teeth</em></div>
 								</div>
 								<div class="col">
-									<img src="http://15medium.com/codepen/tribute/hesitation.jpg" class="img-fluid" alt="Hesitation Marks" >
+									<img src="images/hesitation.jpg" class="img-fluid" alt="Hesitation Marks" >
 									<div class="caption text-center"><em>Hesitation Marks</em></div>
 								</div>
 
