Main image added to card-block

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 					</div>
 				</div>
 				<div class="card">
+				<div class="card-block">
 					<figure class="figure">
-					<img src="images/reznor2.jpg" class="figure-img img-fluid rounded" alt="trent reznor on stage">
-						<figcaption class="figure-caption"><em>Nine Inch Nails performing in Worster MA on November 9, 2008. Photo by maryelle st. clare</em></figcaption>
+					<img src="images/reznor2.jpg" class="figure-img img-fluid" alt="trent reznor on stage">
+						<figcaption class="figure-caption text-right"><em>Nine Inch Nails performing in Worster MA on November 9, 2008. Photo by maryelle st. clare.</em></figcaption>
 					</figure>
 
-					<div class="card-block">
+					
 						<blockquote class="blockquote">
 							<p>"In my life, I was always floating around the edge of the dark side and saying what if take it a little bit too far, and who says you have to stop there, and what's behind the next door. Maybe you gain a wisdom from examining those things. But after a while, you get too far down in the quicksand."</p>
 
